adding search function

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,10 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./src/*"]
-    }
-  }
+    },
+    "types": ["chrome"]
+  },
+  "globals": {
+    "chrome": true
+}
 }
